# Delilah

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
deploy/: upgrade-dbisam.cmd  upgrade-dbisam.sh
src/: dbisam_extension.cpp  dbisam_scan.cpp  dbisam_storage.cpp
src/include/: dbisam_extension.hpp
src/include/dbisam/: blob.hpp  client.hpp  crypto.hpp  cursor.hpp  cursor_info.hpp  framing.hpp  msg.hpp  response.hpp  row.hpp  schema.hpp  sys_socket.hpp  text.hpp  wire.hpp
src/include/dbisam/storage/: dbisam_attach_options.hpp  dbisam_attached_scan_bind.hpp  dbisam_catalog.hpp  dbisam_filter_render.hpp  dbisam_schema_entry.hpp  dbisam_table_entry.hpp  dbisam_transaction.hpp  dbisam_transaction_manager.hpp
src/protocol/: blob.cpp  client.cpp  crypto.cpp  cursor.cpp  cursor_info.cpp  framing.cpp  msg.cpp  response.cpp  row.cpp  schema.cpp  sys_socket.cpp  text.cpp  wire.cpp
src/storage/: dbisam_attach_options.cpp  dbisam_catalog.cpp  dbisam_filter_render.cpp  dbisam_optimizer.cpp  dbisam_schema_entry.cpp  dbisam_table_entry.cpp  dbisam_transaction.cpp  dbisam_transaction_manager.cpp
test/: test_attach_options.cpp  test_phase2.cpp  test_phase3.cpp  test_phase4.cpp  test_phase4_live.cpp  test_phase5.cpp  test_phase5_dump.cpp  test_phase5_live.cpp  test_phase7.cpp  test_text.cpp
